add validations to user avatar

--- a/todo.txt
+++ b/todo.txt
@@ -1,26 +1,27 @@
 * add no after sign up
   - se nao tiver uma imagem no avatar, define uma default pra ele
-  - add validations to users, and users avatars
+  [OK] add validations to users, and users avatars
 
-* add validations to pictures
-  - add validations to pictures
-  - add validations to pictures :photo
+[OK] add validations to pictures
+  [OK] add validations to pictures
+  [OK] add validations to pictures :photo
 
 *views
   * add time_ago to pictures view
   * fix view show
-  * add username to user profile view
+  [OK] add username to user profile view
 
 * users
-  - create user profile
-    - create user controller and views like ruby gems corsego
+  [OK] create user profile
+    [OK] create user controller and views like ruby gems corsego
   - update custom informations from devise
-  - set a char limit(40) to user description
-  - add username convertion in email first part/@
+  [OK] set a char limit(40) to user description
+  [OK] add username convertion in email first part/@
+  - add user profile preview like github, content: https://www.youtube.com/watch?v=_T6uOL9L7NM&t=1s
 
   
   - use letter_oppner
-  - add send mails
+  - add send mails, content: https://www.youtube.com/watch?v=eYhi_rbnOo8
   - add confirmable
 
 * header
@@ -32,12 +33,14 @@
 * abrir modal ao clicar na foto no index
   - ele abre um modal mostando a foto em full na tela, e um x pra sair
 
-* footer no fim da pagina
+[OK] footer no fim da pagina
   [OK] pra isso é so por o min-height do html como 100%
 
-* add authorization com rolify e pundit
+* infinity scroll, content: https://www.youtube.com/watch?v=ScxUqW29F7E
 
-* add likes(isso vai ter um relacionamento entre tabelas)
+* add authorization com rolify e pundit, content: https://www.youtube.com/watch?v=URDKxGn0pxo&t=9s , https://www.youtube.com/watch?v=xxkx57-vbQI&t=2s
+
+* add likes(isso vai ter um relacionamento entre tabelas), content: https://www.youtube.com/watch?v=o26zl4jskWU&t=17s
 
 * add comments(tbm vai ter relacionamento)
 
@@ -48,4 +51,4 @@
   - install ransack
   - install activity tracker
   - install facker
-  - font-awesome
+  - font-awesome, content: https://www.youtube.com/watch?v=c-EbQDB0RsQ&t=30s
