--- a/todo.txt
+++ b/todo.txt
@@ -63,3 +63,4 @@
   - install activity tracker
   - install facker
   - font-awesome, content: https://www.youtube.com/watch?v=c-EbQDB0RsQ&t=30s
+  - da uma olhada na gem active admin, é interessante
