--- a/todo.txt
+++ b/todo.txt
@@ -19,6 +19,7 @@
   [OK] no pictures index, quero mudar o componente das imagens, passar a ser um boostrap card, tlg?
   [OUT] add o preview da imagem com um pop up na tela inteira
   - add navigation
+  - add ground navigation with basics options, like(home, search, back, create...)
   [OK] add username to user profile view
 
 * users
