--- a/todo.txt
+++ b/todo.txt
@@ -46,6 +46,7 @@
   - create admin_users view
     it could be like corsego, show all users, and status, like if online, last sign in....
   - add easyly way to admin destroy picture
+  - fix admin destroy pictures
 
 * header
   - header padding
@@ -65,6 +66,7 @@
 [OK] add authorization com rolify e pundit, content: https://www.youtube.com/watch?v=URDKxGn0pxo&t=9s , https://www.youtube.com/watch?v=xxkx57-vbQI&t=2s
 
 [OK] add likes(isso vai ter um relacionamento entre tabelas), content: https://www.youtube.com/watch?v=o26zl4jskWU&t=17s
+  - make likes by gem acts as vottable
   - make likes works with turbo
 
 [OK] add comments(tbm vai ter relacionamento)
@@ -84,5 +86,6 @@
   - add notification to users by activities like, receive comment, someone start to follow, someone liked...
   - inatall notification error by email in production
   - install facker
+  - add internacionaliation, content: https://www.youtube.com/watch?v=hqC2zZqSrTI
   [OK] font-awesome, content: https://www.youtube.com/watch?v=c-EbQDB0RsQ&t=30s
   [OK] da uma olhada na gem active admin, é interessante
