doc: update todo list

--- a/todo.txt
+++ b/todo.txt
@@ -29,8 +29,8 @@
 * users
   [OK] create user profile
     [OK] create user controller and views like ruby gems corsego
-  - add advise that cant update information temporaly
-  - update custom informations from devise
+  [OK] add advise that cant update information temporaly
+  [OK] update custom informations from devise
   [OK] set a char limit(40) to user description
   [OK] add username convertion in email first part/@
   [OK] user non logged in can access index page
