basics approve post system

--- a/todo.txt
+++ b/todo.txt
@@ -29,6 +29,7 @@
   - fix card comment header padding, and where it shows time
   - fix responsive padding of picture card, to screens width > 500px it could be px-2
   - show who liked pictures, like follows
+  - like system by hotwire
 
 * users
   [OK] create user profile
