update ruby version/ add Procfile

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
 
   [OK] add param "data: { disable_with: 'message' }" to button, to block double requests, try it out to test
 
+- add rspec and basics specs
 - Needs to validates new user account too, if the avatar is ok
 
 [OK] active storage
